// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"test" option matches snapshot for a single \`test\` value ({RegExp}): assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73160,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "async.async.js?ver=8b644dc8a959875e39cf",
    265,
    Object {
      "fullhash": "8b644dc8a959875e39cf",
      "immutable": true,
      "javascriptModule": false,
      "size": 265,
    },
  ],
  Array [
    "main.js?var=8b644dc8a959875e39cf",
    17179,
    Object {
      "fullhash": "8b644dc8a959875e39cf",
      "immutable": true,
      "javascriptModule": false,
      "size": 17179,
    },
  ],
]
`;

exports[`"test" option matches snapshot for a single \`test\` value ({RegExp}): errors 1`] = `Array []`;

exports[`"test" option matches snapshot for a single \`test\` value ({RegExp}): warnings 1`] = `Array []`;

exports[`"test" option matches snapshot for multiple \`test\` values ({Array<RegExp>}): assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73160,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.js?ver=8b644dc8a959875e39cf",
    265,
    Object {
      "fullhash": "8b644dc8a959875e39cf",
      "immutable": true,
      "javascriptModule": false,
      "size": 265,
    },
  ],
  Array [
    "main.js?var=8b644dc8a959875e39cf",
    17179,
    Object {
      "fullhash": "8b644dc8a959875e39cf",
      "immutable": true,
      "javascriptModule": false,
      "size": 17179,
    },
  ],
]
`;

exports[`"test" option matches snapshot for multiple \`test\` values ({Array<RegExp>}): errors 1`] = `Array []`;

exports[`"test" option matches snapshot for multiple \`test\` values ({Array<RegExp>}): warnings 1`] = `Array []`;

exports[`"test" option matches snapshot with empty \`test\` value: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73160,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.js.gz",
    179,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 179,
    },
  ],
  Array [
    "async.async.js?ver=8b644dc8a959875e39cf",
    265,
    Object {
      "fullhash": "8b644dc8a959875e39cf",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.js.gz",
      },
      "size": 265,
    },
  ],
  Array [
    "main.js.gz",
    4102,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 4102,
    },
  ],
  Array [
    "main.js?var=8b644dc8a959875e39cf",
    17179,
    Object {
      "fullhash": "8b644dc8a959875e39cf",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
      },
      "size": 17179,
    },
  ],
]
`;

exports[`"test" option matches snapshot with empty \`test\` value: errors 1`] = `Array []`;

exports[`"test" option matches snapshot with empty \`test\` value: warnings 1`] = `Array []`;

exports[`"test" option should work when no asset to compress : assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "async.async.js?ver=8b644dc8a959875e39cf",
    265,
    Object {
      "fullhash": "8b644dc8a959875e39cf",
      "immutable": true,
      "javascriptModule": false,
      "size": 265,
    },
  ],
  Array [
    "main.js?var=8b644dc8a959875e39cf",
    17179,
    Object {
      "fullhash": "8b644dc8a959875e39cf",
      "immutable": true,
      "javascriptModule": false,
      "size": 17179,
    },
  ],
]
`;

exports[`"test" option should work when no asset to compress : errors 1`] = `Array []`;

exports[`"test" option should work when no asset to compress : warnings 1`] = `Array []`;
